[package]
name = "informant"
version = "0.1.0"
authors = ["BlandyBrains <NothingsBland@proton.me>"]
edition = "2021"

[[bin]]
name = "informant"
path = "src/main.rs"

[features]
default = ["store"]

store = []

[dependencies]
meta = { path = "../meta" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.89" }

[dev-dependencies]
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics" ] }
