[package]
name = "meta"
version = "0.1.2"
authors = ["BlandyBrains <NothingsBland@proton.me>"]
edition = "2021"

[lib]
name = "meta"
path = "src/lib.rs"

[features]
default = [
    "dep:image"
]

all = [
    "dep:ape", 
    "dep:id3",
    "dep:kamadak-exif",
    "dep:image",
    "dep:mp4",
    "dep:matroska",
    "dep:libheif-rs",
    "dep:blake3"
]

[dependencies]
regex = { version = "1.7.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.89" }

blake3 = { version = "1.5.0", optional = true }
kamadak-exif = { version = "0.5.4", optional = true }
mp4 = { version = "0.12.0", optional = true }
matroska = { version = "0.25.0", optional = true }
id3 = { version = "1.5.0", optional = true }
ape = { version = "0.4.0", optional = true }
libheif-rs = { version = "0.15.1", optional = true }
image = { version = "0.23.14", optional = true }

[dev-dependencies]
chrono = { version = "0.4.23" }
walkdir = { version = "2.3.3" }